--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1> Este es un sitio de prueba para github page</h1>
 <p> y es parte del curso de platzi</p> 
-
+<p><img src="https://i.imgur.com/PfA0M2o.gif" ></p>
